--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="?attr/floatingActionButtonLargeStyle"
-            android:src="@drawable/img_plus"
+            android:src="@drawable/baseline_add_24"
             app:borderWidth="@dimen/_36sp"
             android:elevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
